<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_color"
	android:gravity="center_horizontal"
    tools:context=".Band_3" >
    <!--
    	strange error when layout property placed there ^^
    -->
    
    <Button
        android:id="@+id/home"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_home"
        android:background="@drawable/custom_button" />

    <ImageView
        android:id="@+id/bandImage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bandName3"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/img_content_description"
        android:src="@drawable/nine_inch_nails" />

    <TextView
        android:id="@+id/bandName3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/home"
        android:gravity="center"
        android:text="@string/band_03_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/txt_color"
        android:padding="10dp"
        android:textSize="@dimen/title_size" />

    <TextView
        android:id="@+id/bandInfo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bandImage3"
        android:gravity="left"
        android:text="@string/band_03_info"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:padding="30dp"
        android:textColor="@color/txt_info_color" />

</RelativeLayout>

</ScrollView>