<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
	android:gravity="center_horizontal"
    tools:context=".Band_1" >
    <!--
    	strange error when layout property placed there ^^
    -->
    
    <Button
        android:id="@+id/home"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_home" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/home"
        android:gravity="center"
        android:text="@string/band_01_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:contentDescription="band image"
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:src="@drawable/a_perfect_circle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/band_01_info"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>